[package]
name = "async-sse"
version = "5.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/http-rs/async-sse"
documentation = "https://docs.rs/async-sse"
description = "Async Server Sent Event parser and encoder"
readme = "README.md"
edition = "2018"
keywords = ["async", "server-sent-events", "sse", "client", "server"]
categories = []
authors = [
    "Renée Kooi <renee@kooi.me>",
    "Yoshua Wuyts <yoshuawuyts@gmail.com>",
]

[features]

[dependencies]
futures-lite = "1.11.3"
http-types = { version = "2.12.0", default-features = false }
log = "0.4.8"
memchr = "2.3.3"
pin-project-lite = "0.2.7"
async-channel = "1.1.1"

[dev-dependencies]
femme = "2.0.0"
async-std = { version = "1.6.0", features = ["attributes", "unstable"] }

[patch.crates-io]
http-types = { git = "https://github.com/grafbase/http-types", rev = "f6d07f9f977dc54cf89d171efc830772dc45f454" } # http-v1-and-others
